[gd_scene load_steps=2 format=3 uid="uid://bru53478iww5t"]

[ext_resource type="Script" path="res://Scripts/Menus/main_menu.gd" id="1_gmmjx"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmmjx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.463
anchor_top = 0.368
anchor_right = 0.537
anchor_bottom = 0.632
offset_left = -0.376038
offset_top = 0.0359802
offset_right = 0.375977
offset_bottom = -0.0360107
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Campaign" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Campaign"

[node name="Race" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Race"

[node name="Fight" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fight"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Campaign" to="." method="_on_campaign_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Race" to="." method="_on_race_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
